prow/cluster/resources/gatekeeper-constraints/prow-k8s-cluster/allowedImagesProwToolsNamespaces.yaml
# Allow images needed to run supporting tools in Prow cluster.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: prow-tools-namespaces
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    namespaces:
      - "external-secrets"
      - "gatekeeper-system"
      - "prow-monitoring"
      - "probot-stale"
    images:
      - "ghcr.io/external-secrets/external-secrets"
      - "docker.io/openpolicyagent/gatekeeper"
      - "docker.io/grafana/grafana"
      - "docker.io/nginx"
      - "quay.io/prometheus-operator/prometheus-config-reloader"
      - "quay.io/prometheus-operator/prometheus-operator"
      - "eu.gcr.io/kyma-project"
      - "eu.gcr.io/sap-kyma-neighbors-dev"
      - "europe-docker.pkg.dev/kyma-project"
      - "europe-west3-docker.pkg.dev/sap-kyma-neighbors-dev"
